added tests for error conditions
* also: sonarqube issue